# include-tidy

./: .gitignore  ChangeLog  Doxyfile  Makefile.am  NEWS  README.md  bootstrap  configure.ac  include-tidy.css
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
etc/: Makefile.am  config.toml  include-tidy.toml
lib/: .gitignore  Makefile.am
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4  pjl_prog_llvm_config_version.m4  pjl_unsigned_int128.m4
man/: Makefile.am
man/man1/: Makefile.am  include-tidy.1
man/man5/: Makefile.am  include-tidy.5
src/: .gitignore  Makefile.am  array.c  array.h  bit_util.c  bit_util.h  clang_util.c  clang_util.h  cli_options.c  cli_options.h  color.c  color.h  config_file.c  config_file.h  include-tidy.c  include-tidy.h  include-tidy.toml  includes.c  includes.h  options.c  options.h  path_util.c  path_util.h  path_util_test.c  pjl_config.h  print.c  print.h  red_black.c  red_black.h  red_black_test.c  strbuf.c  strbuf.h  symbols.c  symbols.h  tidy_util.c  tidy_util.h  toml_lite.c  toml_lite.h  toml_test.c  trans_unit.c  (+8 more)
test/: Makefile.am  not_in_Makefile.sh  run_test.sh  update_test.sh
test/data/: align-column.toml  associated-header.c  associated-header.toml  c_ast.h  c_type.h  c_typedef.h  cdecl_dym.c  comment-style.toml  comment-symbols.c  dump.h  english.h  header-keep.c  header-keep.toml  hello-2-stdio.c  hello.c  keep.c  keep.toml  p_macro.h  red_black.h  show.c  slist.h  types.h  z-associated-header.h
test/expected/: align-column.out  associated-header.out  c_ast.out  c_type.out  c_typedef.out  cdecl_dym.out  cli-align-column.out  cli-comment-style.out  cli-comment-symbols.out  cli-error-always.out  cli-help.out  cli-options-error.out  cli_error.out  cli_options-error.out  cli_options.out  comment-style.out  dump.out  duplicate.out  english.out  header-keep.out  hello.out  keep.out  p_macro.out  red_black.out  slist.out  types.out
test/tests/: align-column.test  associated-header.test  c_ast.test  c_type.test  c_typedef.test  cdecl_dym.test  cli-align-column.test  cli-comment-style.test  cli-comment-symbols.test  cli-error-always.test  cli-options-error.test  cli_error.test  cli_options-error.test  cli_options.test  comment-style.test  dump.test  duplicate.test  english.test  header-keep.test  hello.test  keep.test  p_macro.test  red_black.test  show.test  types.test
